# SRE-Toolkit

./: .gitignore  .mcp.example.json  CLAUDE.md  GEMINI.md  README.md
.gitlab/issue_templates/: default.md  기능 개선.md  기능 요청.md  리팩토링.md  문서.md  버그.md  보안 취약점.md  스터디.md  하위 작업.md
go/: CLAUDE.md  README.md  go.mod
go/cmd/argus/: CLAUDE.md  Makefile  README.md  build.sh  main.go  rules.yaml  run.cmd  run.ps1  run.sh
go/cmd/k8s-diff/: CLAUDE.md  Makefile  README.md  build.sh  main.go  rules.yaml  run.sh
go/internal/argus/analyzer/: analyzer.go  analyzer_test.go  converter.go  converter_test.go
go/internal/argus/config/: config.go  config_test.go  exclusion.go  exclusion_test.go
go/internal/argus/domain/: models.go  models_test.go
go/internal/argus/reporter/: console.go  html.go  image.go  interface.go  markdown.go  markdown_test.go
go/internal/argus/service/: scanner.go  scanner_test.go
go/internal/k8s-diff/analyzer/: analyzer.go
go/internal/k8s-diff/config/: config.go
go/internal/k8s-diff/domain/: resource.go
go/internal/k8s-diff/k8sclient/: factory.go  wrapper.go
go/pkg/k8s/client/: client.go
python/: .gitignore  CLAUDE.md  README.md  pyproject.toml
python/common/: __init__.py  config.py  exceptions.py  interfaces.py  logging.py  utils.py
python/sysinfo/: CLAUDE.md  README.md  __init__.py  __main__.py  cli.py  collectors.py  formatters.py  interfaces.py
scripts/: CLAUDE.md  README.md
scripts/claude-account-switcher/: CLAUDE.md  README.md  claude-aliases.sh  claude-completion.bash  claude-completion.zsh  claude-switcher.sh  install.sh
(+8 files in other folders)
